[package]
name = "cuda-rbac"
version = "0.1.0"
edition = "2021"
description = "Role-based access control with inheritance"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-rbac"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

